<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <!--This is a simple layout no need for constraint layout so we are using a linear layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragments.WelcomeFragment">


        <TextView
            android:id="@+id/textView3"
            style="@style/welcome_text"
            android:text="@string/welcome_text"
            android:textColor="@android:color/black" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="386dp"
            android:layout_marginStart="@dimen/field_margin"
            android:layout_marginTop="@dimen/field_margin"
            android:layout_marginEnd="@dimen/field_margin"
            android:src="@drawable/shoe_welcome" />

        <TextView
            android:id="@+id/textView4"
            style="@style/welcome_text"
            android:text="@string/store_detail"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/to_instuctions_button"
            style="@style/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginStart="@dimen/field_margin"
            android:layout_marginTop="@dimen/field_margin"
            android:layout_marginEnd="@dimen/field_margin"
            android:text="@string/go_to_next_screen"
            android:textSize="16sp" />
    </LinearLayout>
</layout>
